syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "ComputeProto";

service ComputeService {
    rpc SendData (InputConfig) returns (UUIDResponse);
    rpc RetrieveCharArr (UUIDRequest) returns (CharArrayResponse);
    rpc RetrieveCharAl (UUIDRequest) returns (CharArrayListResponse);
}

message InputConfig {
    oneof config {
        int32 integerInput = 1;
        string fileInput = 2;
    }
}

message UUIDRequest {
    string uuid = 1;
}

message UUIDResponse {
    string uuid = 1;
}

message CharArrayResponse {
    repeated string charArray = 1;
}

message CharArrayListResponse {
    repeated CharArrayResponse charArrayList = 1;
}